@@ -44,7 +44,9 @@ m4_assert_numargs(2)
 `ifdef(`PIC',`
 ifelse(index(defn(`load_eip'), `$2'),-1,
 `m4append(`load_eip',
-`L(movl_eip_`'substr($2,1)):
+`	TEXT
+	ALIGN(16)
+L(movl_eip_`'substr($2,1)):
 	movl	(%esp), $2
 	ret_internal
 ')')
@@ -67,7 +69,9 @@ m4_assert_numargs(2)
 `ifdef(`PIC',`
 ifelse(index(defn(`load_eip'), `$2'),-1,
 `m4append(`load_eip',
-`L(movl_eip_`'substr($2,1)):
+`	TEXT
+	ALIGN(16)
+L(movl_eip_`'substr($2,1)):
 	movl	(%esp), $2
 	ret_internal
 ')')
